--- a/SEAQUA_A_160X600/index.html
+++ b/SEAQUA_A_160X600/index.html
@@ -6,6 +6,7 @@
     <title></title>
     <link rel="stylesheet" href="style.css" />
     <!-- click thru -->
+    npm
     <style>
       #clicktagger {
         background-color: rgba(255, 255, 255, 0);
@@ -17,7 +18,8 @@
         z-index: 5000;
       }
     </style>
-    <script>
+    <!--Adform tracking code
+		 <script>
       document.write(
         '<script src="' +
           (window.API_URL ||
@@ -25,16 +27,16 @@
               Math.random()) +
           '"><\/script>'
       );
-    </script>
+    </script> -->
   </head>
 
   <body>
-    <div
+    <!-- <div
       id="clicktagger"
       onclick="javascript:window.open(dhtml.getVar('clickTAG'),'_blank');"
       onmouseover="javascript:this.style.cursor='pointer';"
       onmouseout="javascript:this.style.cursor='auto';"
-    ></div>
+    ></div> -->
     <div id="ad">
       <div id="banner">
         <div id="copywrapper">
