--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>*~*~'`wElCuM 2 dA bAnNeR z0ne`'~*~*</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <iframe
+      class="160x600"
+      src="SEAQUA_A_160X600/index.html"
+      frameborder="0"
+    ></iframe>
+  </body>
+</html>
