Tweaking to avoid adblocks

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <body>
     <iframe
       class="160x600"
+      width="160px"
+      height="600px"
       src="SEAQUA_A_160X600/index.html"
       frameborder="0"
     ></iframe>
