--- a/SEAQUA_A_160X600/index.html
+++ b/SEAQUA_A_160X600/index.html
@@ -6,8 +6,7 @@
     <title></title>
     <link rel="stylesheet" href="style.css" />
     <!-- click thru -->
-    npm
-    <style>
+    <!-- <style>
       #clicktagger {
         background-color: rgba(255, 255, 255, 0);
         left: 0px;
@@ -17,7 +16,7 @@
         height: 600px;
         z-index: 5000;
       }
-    </style>
+    </style> -->
     <!--Adform tracking code
 		 <script>
       document.write(
@@ -104,7 +103,7 @@
     </div>
 
     <!-- greensock -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.1.1/gsap.min.js"></script>
+    <script src="../gsap.min.js"></script>
     <!-- <script src="../GSDevTools.min.js"></script> -->
     <script src="CustomEase.min.js"></script>
     <script src="CustomWiggle.min.js"></script>
@@ -113,7 +112,7 @@
       // 				GSDevTools.create();
 
       function fadeIn() {
-        var tl = new TimelineMax();
+        var tl = gsap.timeline();
         tl.from(
           [
             "#background",
@@ -133,13 +132,13 @@
       }
 
       function clouds() {
-        var tl = new TimelineMax({ id: "clouds" });
+        var tl = gsap.timeline({ id: "clouds" });
         tl.to(["#clouds"], 9.5, { x: 50, ease: "none" });
         return tl;
       }
 
       function pan() {
-        var tl = new TimelineMax({ id: "pan" });
+        var tl = gsap.timeline({ id: "pan" });
         tl.to(["#background"], 4, { y: -90 })
           .to(["#clouds"], 4, { y: -380 }, "-=4")
           .to(["#copywrapper"], 4, { y: -272 }, "-=4")
@@ -150,25 +149,25 @@
       }
 
       function octoFloat() {
-        var tl = new TimelineMax({ id: "octoFloat" });
+        var tl = gsap.timeline({ id: "octoFloat" });
         tl.to("#octowrapper", 9.2, { x: -1, y: -1, ease: "myWiggle" });
         return tl;
       }
 
       function waves() {
-        var tl = new TimelineMax({ id: "waves" });
+        var tl = gsap.timeline({ id: "waves" });
         tl.to("#wavefg", 14, { x: 20, ease: "waveWiggle" });
         return tl;
       }
 
       function copy1() {
-        var tl = new TimelineMax({ id: "copy1" });
+        var tl = gsap.timeline({ id: "copy1" });
         tl.from(["#copy1g"], 0.75, { x: -25, autoAlpha: 0 });
         return tl;
       }
 
       function copy2() {
-        var tl = new TimelineMax({ id: "copy2" });
+        var tl = gsap.timeline({ id: "copy2" });
         tl.to("#copy1g", 0.75, { autoAlpha: 0 }).from(
           ["#copy1w"],
           0.75,
@@ -179,13 +178,13 @@
       }
 
       function copy3() {
-        var tl = new TimelineMax({ id: "copy3" });
+        var tl = gsap.timeline({ id: "copy3" });
         tl.from(["#copy2"], 0.75, { x: -25, autoAlpha: 0 });
         return tl;
       }
 
       function armWave1() {
-        var tl = new TimelineMax({ id: "armWave1" });
+        var tl = gsap.timeline({ id: "armWave1" });
         tl.to(["#octoarm1"], 5.25, {
           rotate: "-4deg",
           repeat: 1,
@@ -197,7 +196,7 @@
       }
 
       function armWave2() {
-        var tl = new TimelineMax({ id: "armWave2" });
+        var tl = gsap.timeline({ id: "armWave2" });
         tl.to(["#octoarm2"], 5.95, {
           rotate: "8deg",
           repeat: 1,
@@ -209,7 +208,7 @@
       }
 
       function armWave3() {
-        var tl = new TimelineMax({ id: "armWave3" });
+        var tl = gsap.timeline({ id: "armWave3" });
         tl.to(["#octoarm3"], 5.6, {
           rotate: "5deg",
           repeat: 1,
@@ -220,7 +219,7 @@
       }
 
       function endframe() {
-        var tl = new TimelineMax({ id: "endframe" });
+        var tl = gsap.timeline({ id: "endframe" });
         tl.from(["#cta", "#logo"], 0.75, {
           scale: 0,
           autoAlpha: 0,
@@ -233,7 +232,7 @@
       CustomWiggle.create("waveWiggle", { wiggles: 4, type: "uniform" });
       CustomWiggle.create("armWiggle", { wiggles: 3, type: "easeInOut" });
 
-      var master = new TimelineMax();
+      var master = gsap.timeline();
 
       //master timeline
 
