Fixed adblock issues!

--- a/SEAQUA_A_3x25/index.html
+++ b/SEAQUA_A_3x25/index.html
@@ -6,97 +6,54 @@
     <title></title>
     <link rel="stylesheet" href="style.css" />
     <!-- click thru -->
-    <!-- <style>
-      #clicktagger {
-        background-color: rgba(255, 255, 255, 0);
-        left: 0px;
-        position: absolute;
-        top: 0px;
-        width: 160px;
-        height: 600px;
-        z-index: 5000;
-      }
-    </style> -->
-    <!--Adform tracking code
-		 <script>
-      document.write(
-        '<script src="' +
-          (window.API_URL ||
-            "https://s1.adform.net/banners/scripts/rmb/Adform.DHTML.js?bv=" +
-              Math.random()) +
-          '"><\/script>'
-      );
-    </script> -->
   </head>
 
   <body>
-    <!-- <div
-      id="clicktagger"
-      onclick="javascript:window.open(dhtml.getVar('clickTAG'),'_blank');"
-      onmouseover="javascript:this.style.cursor='pointer';"
-      onmouseout="javascript:this.style.cursor='auto';"
-    ></div> -->
     <div id="ad">
       <div id="banner">
         <div id="copywrapper">
           <div id="copy1g">
-            <img src="images/160x600_copy1g.png" width="94px" height="143px" />
+            <img src="images/copy1g.png" width="234px" height="40px" />
           </div>
           <div id="copy1w">
-            <img src="images/160x600_copy1w.png" width="94px" height="144px" />
+            <img src="images/copy1w.png" width="233px" height="40px" />
           </div>
           <div id="copy2">
-            <img src="images/160x600_copy2.png" width="122px" height="240px" />
+            <img src="images/copy2.png" width="198px" height="82px" />
           </div>
         </div>
         <div id="cta">
-          <img src="images/160x600_cta.png" width="133px" height="35px" />
+          <img src="images/cta.png" width="117px" height="31px" />
         </div>
         <div id="logo">
-          <img src="images/160x600_logo.png" width="120px" height="100px" />
+          <img src="images/logo.png" width="91px" height="76px" />
         </div>
 
         <div id="clouds">
-          <img src="images/160x600_clouds.png" width="348px" height="347px" />
+          <img src="images/clouds.png" width="540px" height="256px" />
         </div>
 
         <div id="octowrapper">
           <div id="octobody">
-            <img
-              src="images/160x600_octobody.png"
-              width="124px"
-              height="71px"
-            />
+            <img src="images/octobody.png" width="171px" height="97px" />
           </div>
           <div id="octoarm1">
-            <img
-              src="images/160x600_octoarm1.png"
-              width="147px"
-              height="125px"
-            />
+            <img src="images/octoarm1.png" width="239px" height="103px" />
           </div>
           <div id="octoarm2">
-            <img
-              src="images/160x600_octoarm2.png"
-              width="91px"
-              height="195px"
-            />
+            <img src="images/octoarm2.png" width="215px" height="135px" />
           </div>
           <div id="octoarm3">
-            <img
-              src="images/160x600_octoarm3.png"
-              width="206px"
-              height="119px"
-            />
+            <img src="images/octoarm3.png" width="215px" height="160px" />
           </div>
         </div>
 
         <div id="wavefg">
-          <img src="images/160x600_wavefg.png" width="363px" height="246px" />
+          <img src="images/wavefg.png" width="744px" height="86px" />
         </div>
         <!-- background -->
         <div id="background">
-          <img src="images/160x600_bg.png" width="161px" height="739px" />
+          <img src="images/bg.png" width="300px" height="347px" />
         </div>
       </div>
       <!-- end banner -->
@@ -105,8 +62,8 @@
     <!-- greensock -->
     <script src="../gsap.min.js"></script>
     <!-- <script src="../GSDevTools.min.js"></script> -->
-    <script src="CustomEase.min.js"></script>
-    <script src="CustomWiggle.min.js"></script>
+    <script src="../CustomEase.min.js"></script>
+    <script src="../CustomWiggle.min.js"></script>
     <script>
       //GSDevtools
       // 				GSDevTools.create();
@@ -140,10 +97,10 @@
       function pan() {
         var tl = gsap.timeline({ id: "pan" });
         tl.to(["#background"], 4, { y: -90 })
-          .to(["#clouds"], 4, { y: -380 }, "-=4")
-          .to(["#copywrapper"], 4, { y: -272 }, "-=4")
-          .from(["#wavefg"], 4, { y: 400 }, "-=4")
-          .from(["#octowrapper"], 4, { y: 400 }, "-=4");
+          .to(["#clouds"], 4, { y: -180 }, "-=4")
+          .to(["#copywrapper"], 4, { y: -122 }, "-=4")
+          .from(["#wavefg"], 4, { y: 90 }, "-=4")
+          .from(["#octowrapper"], 4, { y: 200 }, "-=4");
 
         return tl;
       }
@@ -252,4 +209,15 @@
     </script>
     <!-- end greensock animation -->
   </body>
+  <script>
+    var clickTag = "";
+
+    function bgExitHandler(e) {
+      window.open(window.clickTag);
+      console.log("clicked");
+    }
+    document
+      .getElementById("bg-exit")
+      .addEventListener("click", bgExitHandler, false);
+  </script>
 </html>
