--- a/index.html
+++ b/index.html
@@ -8,10 +8,27 @@
   </head>
   <body>
     <iframe
-      class="160x600"
+      width="300px"
+      height="250px"
+      src="SEAQUA_A_3x25/index.html"
+      frameborder="0"
+    ></iframe>
+    <iframe
       width="160px"
       height="600px"
-      src="SEAQUA_A_160X600/index.html"
+      src="SEAQUA_A_16x6/index.html"
+      frameborder="0"
+    ></iframe>
+    <iframe
+      width="320px"
+      height="50px"
+      src="SEAQUA_A_32x5/index.html"
+      frameborder="0"
+    ></iframe>
+    <iframe
+      width="728px"
+      height="90px"
+      src="SEAQUA_A_72x9/index.html"
       frameborder="0"
     ></iframe>
   </body>
