--- a/index.html
+++ b/index.html
@@ -7,29 +7,48 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <iframe
-      width="300px"
-      height="250px"
-      src="SEAQUA_A_3x25/index.html"
-      frameborder="0"
-    ></iframe>
-    <iframe
-      width="160px"
-      height="600px"
-      src="SEAQUA_A_16x6/index.html"
-      frameborder="0"
-    ></iframe>
-    <iframe
-      width="320px"
-      height="50px"
-      src="SEAQUA_A_32x5/index.html"
-      frameborder="0"
-    ></iframe>
-    <iframe
-      width="728px"
-      height="90px"
-      src="SEAQUA_A_72x9/index.html"
-      frameborder="0"
-    ></iframe>
+    <button type="button" class="collapsible">Seattle Aquarium</button>
+    <div class="content">
+      <iframe
+        width="300px"
+        height="250px"
+        src="SEAQUA_A_3x25/index.html"
+        frameborder="0"
+      ></iframe>
+      <iframe
+        width="160px"
+        height="600px"
+        src="SEAQUA_A_16x6/index.html"
+        frameborder="0"
+      ></iframe>
+      <iframe
+        width="320px"
+        height="50px"
+        src="SEAQUA_A_32x5/index.html"
+        frameborder="0"
+      ></iframe>
+      <iframe
+        width="728px"
+        height="90px"
+        src="SEAQUA_A_72x9/index.html"
+        frameborder="0"
+      ></iframe>
+    </div>
+    <script>
+      var coll = document.getElementsByClassName("collapsible");
+      var i;
+
+      for (i = 0; i < coll.length; i++) {
+        coll[i].addEventListener("click", function () {
+          this.classList.toggle("active");
+          var content = this.nextElementSibling;
+          if (content.style.maxHeight) {
+            content.style.maxHeight = null;
+          } else {
+            content.style.maxHeight = content.scrollHeight + "px";
+          }
+        });
+      }
+    </script>
   </body>
 </html>
