--- a/index.html
+++ b/index.html
@@ -2,37 +2,49 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>*~*~'`wElCuM 2 dA bAnNeR z0ne`'~*~*</title>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
     <link rel="stylesheet" href="style.css" />
+    <!-- Bootstrap CDN -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+      crossorigin="anonymous"
+    />
+    <title>*~*~'`wElCuM 2 dA bAnNeR z0ne`'~*~*</title>
   </head>
   <body>
-    <button type="button" class="collapsible">Seattle Aquarium</button>
-    <div class="content">
-      <iframe
-        width="300px"
-        height="250px"
-        src="SEAQUA_A_3x25/index.html"
-        frameborder="0"
-      ></iframe>
-      <iframe
-        width="160px"
-        height="600px"
-        src="SEAQUA_A_16x6/index.html"
-        frameborder="0"
-      ></iframe>
-      <iframe
-        width="320px"
-        height="50px"
-        src="SEAQUA_A_32x5/index.html"
-        frameborder="0"
-      ></iframe>
-      <iframe
-        width="728px"
-        height="90px"
-        src="SEAQUA_A_72x9/index.html"
-        frameborder="0"
-      ></iframe>
+    <div class="container">
+      <button type="button" class="collapsible">Seattle Aquarium</button>
+      <div class="content">
+        <iframe
+          width="300px"
+          height="250px"
+          src="SEAQUA_A_3x25/index.html"
+          frameborder="0"
+        ></iframe>
+        <iframe
+          width="160px"
+          height="600px"
+          src="SEAQUA_A_16x6/index.html"
+          frameborder="0"
+        ></iframe>
+        <iframe
+          width="320px"
+          height="50px"
+          src="SEAQUA_A_32x5/index.html"
+          frameborder="0"
+        ></iframe>
+        <iframe
+          width="728px"
+          height="90px"
+          src="SEAQUA_A_72x9/index.html"
+          frameborder="0"
+        ></iframe>
+      </div>
     </div>
     <script>
       var coll = document.getElementsByClassName("collapsible");
@@ -50,5 +62,16 @@
         });
       }
     </script>
+    <!-- jQuery and Bootstrap Bundle (includes Popper) -->
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
