--- a/index.html
+++ b/index.html
@@ -18,8 +18,18 @@
   </head>
   <body>
     <div class="container">
-      <button type="button" class="collapsible">Seattle Aquarium</button>
-      <div class="content">
+      <button
+        type="button"
+        class="btn btn-primary btn-block btn-lg"
+        type="button"
+        data-toggle="collapse"
+        data-target="#collapseExample"
+        aria-expanded="false"
+        aria-controls="collapseExample"
+      >
+        Seattle Aquarium
+      </button>
+      <div class="collapse" id="collapseExample">
         <iframe
           width="300px"
           height="250px"
