--- a/staging/echo-studio_test/index.html
+++ b/staging/echo-studio_test/index.html
@@ -25,8 +25,13 @@
       <div id="lid" class="set">
         <img src="images/lid.png" alt="" />
       </div>
-      <div id="light" class="set">
-        <img src="images/light.png" alt="" />
+      <div id="light-wrapper" class="set">
+        <div id="light" class="set">
+          <img src="images/light.png" alt="" />
+        </div>
+        <div id="dark-light" class="set">
+          <img src="images/dark-light.png" alt="" />
+        </div>
       </div>
       <div id="speaker-1" class="set">
         <img src="images/speaker-1.png" alt="" />
@@ -51,8 +56,7 @@
 
       //Define variables
       var speaker =
-        "['#body-back','#body-full','#lid-light','#speaker-1','#speaker-2','#speaker-3','#speaker-4','#speaker-5']";
-      var main = gsap.timeline();
+        "['#body-back','#body-full','#light-wrapper','#speaker-1','#speaker-2','#speaker-3','#speaker-4','#speaker-5']";
 
       //Animation timelines
       function fadeIn() {
@@ -64,15 +68,14 @@
       }
       function enterTop() {
         var tl = gsap.timeline({ id: "enter" });
-        tl.from(
-          ["#bottom", "#bass", "#speaker-5", "#top", "#lid", "#light"],
-          3,
-          {
-            y: -2000,
-            stagger: 0.2,
-            ease: "expo.out",
-          }
-        );
+        tl.from(["#bottom", "#bass", "#speaker-5", "#lid", "#top"], 3, {
+          y: -2000,
+          stagger: 0.2,
+          ease: "expo.out",
+        })
+          .from("#light-wrapper", 2.75, { y: -2000, ease: "expo.Out" }, "-=3.5")
+          .from("#light", 1, { autoAlpha: 0 }, "+=.5");
+
         return tl;
       }
       function speaker1() {
@@ -113,14 +116,17 @@
       }
 
       //Main timeline
-      main
-        .add(fadeIn())
-        .add(enterTop(), 1)
-        .add(speaker2(), 1.5)
-        .add(speaker1(), 1.6)
-        .add(speaker3(), 1.7)
-        .add(speaker4(), 1.4)
-        .add(bodyReveal(), 0.25);
+      window.onload = function () {
+        var main = gsap.timeline();
+        main
+          .add(fadeIn())
+          .add(enterTop(), 1)
+          .add(speaker2(), 1.5)
+          .add(speaker1(), 1.6)
+          .add(speaker3(), 1.7)
+          .add(speaker4(), 1.4)
+          .add(bodyReveal(), 0.25);
+      };
     </script>
   </body>
 </html>
