--- a/staging/index.html
+++ b/staging/index.html
@@ -7,6 +7,9 @@
   </head>
   <body>
     <p><a href="echo-studio_test/index.html">Test</a></p>
-    <p><a href="echo-studio_300x250/index.html">300x250</a></p>
+    <p><a href="echo-studio_p_300x250/index.html">300x250 Price Version</a></p>
+    <p>
+      <a href="echo-studio_np_300x250/index.html">300x250 Non-Price Version</a>
+    </p>
   </body>
 </html>
