Mobile banners and pricing updates

--- a/staging/index.html
+++ b/staging/index.html
@@ -82,6 +82,16 @@
               >
             </li>
           </ul>
+          <ul>
+            <li>
+              <a href="echo-studio_p_320x50/index.html">320x50 Price Version</a>
+            </li>
+            <li>
+              <a href="echo-studio_np_320x50/index.html"
+                >320x50 Non-Price Version</a
+              >
+            </li>
+          </ul>
         </div>
         <div class="col-md"></div>
       </div>
