--- a/staging/index.html
+++ b/staging/index.html
@@ -18,12 +18,11 @@
     <div class="container-fluid">
       <div class="row h-100">
         <div class="col-md"></div>
-        <div class="col-md-6 bg-light h-100">
+        <div class="col-md-7 bg-light h-100">
           <h2 class="text-center">Echo Studio – Animated Digital</h2>
-          <br />
-          <ul>
+          <!-- <ul>
             <li><a href="echo-studio_test/index.html">Animation Test</a></li>
-          </ul>
+          </ul> -->
           <ul>
             <li>
               <a href="echo-studio_p_300x250/index.html"
@@ -90,6 +89,44 @@
               <a href="echo-studio_np_320x50/index.html"
                 >320x50 Non-Price Version</a
               >
+            </li>
+          </ul>
+        </div>
+        <div class="col-md"></div>
+      </div>
+      <div class="row h-100">
+        <div class="col-md"></div>
+        <div class="col-md-7 bg-light h-100 pt-5">
+          <h2 class="text-center">Echo Studio – Animated Social</h2>
+          <br />
+          <h4>No Headline Version</h4>
+          <ul>
+            <li>
+              <a href="social/9x16_NoTextP.mp4">9x16 – Price</a>
+            </li>
+            <li>
+              <a href="social/9x16_NoTextNP.mp4">9x16 – No Price</a>
+            </li>
+            <li>
+              <a href="social/1x1_NoTextP.mp4">1x1 – Price</a>
+            </li>
+            <li>
+              <a href="social/1x1_NoTextNP.mp4">1x1 – No Price</a>
+            </li>
+          </ul>
+          <h4>Headline Version</h4>
+          <ul>
+            <li>
+              <a href="social/9x16_TextP.mp4">9x16 – Price</a>
+            </li>
+            <li>
+              <a href="social/9x16_TextNP.mp4">9x16 – No Price</a>
+            </li>
+            <li>
+              <a href="social/1x1_TextP.mp4">1x1 – Price</a>
+            </li>
+            <li>
+              <a href="social/1x1_TextNP.mp4">1x1 – No Price</a>
             </li>
           </ul>
         </div>
