Final social pieces

--- a/staging/index.html
+++ b/staging/index.html
@@ -16,121 +16,210 @@
   </head>
   <body>
     <div class="container-fluid">
-      <div class="row h-100">
-        <div class="col-md"></div>
-        <div class="col-md-7 bg-light h-100">
-          <h2 class="text-center">Echo Studio – Animated Digital</h2>
-          <!-- <ul>
-            <li><a href="echo-studio_test/index.html">Animation Test</a></li>
-          </ul> -->
-          <ul>
-            <li>
-              <a href="echo-studio_p_300x250/index.html"
-                >300x250 Price Version</a
-              >
-            </li>
-            <li>
-              <a href="echo-studio_np_300x250/index.html"
-                >300x250 Non-Price Version</a
-              >
-            </li>
-          </ul>
-          <ul>
-            <li>
-              <a href="echo-studio_p_728x90/index.html">728x90 Price Version</a>
-            </li>
-            <li>
-              <a href="echo-studio_np_728x90/index.html"
-                >728x90 Non-Price Version</a
-              >
-            </li>
-          </ul>
-          <ul>
-            <li>
-              <a href="echo-studio_p_160x600/index.html"
-                >160x600 Price Version</a
-              >
-            </li>
-            <li>
-              <a href="echo-studio_np_160x600/index.html"
-                >160x600 Non-Price Version</a
-              >
-            </li>
-          </ul>
-          <ul>
-            <li>
-              <a href="echo-studio_p_970x250/index.html"
-                >970x250 Price Version</a
-              >
-            </li>
-            <li>
-              <a href="echo-studio_np_970x250/index.html"
-                >970x250 Non-Price Version</a
-              >
-            </li>
-          </ul>
-          <ul>
-            <li>
-              <a href="echo-studio_p_300x600/index.html"
-                >300x600 Price Version</a
-              >
-            </li>
-            <li>
-              <a href="echo-studio_np_300x600/index.html"
-                >300x600 Non-Price Version</a
-              >
-            </li>
-          </ul>
-          <ul>
-            <li>
-              <a href="echo-studio_p_320x50/index.html">320x50 Price Version</a>
-            </li>
-            <li>
-              <a href="echo-studio_np_320x50/index.html"
-                >320x50 Non-Price Version</a
-              >
-            </li>
-          </ul>
+      <div class="row">
+        <div class="col-lg"></div>
+        <div class="col-lg-6 bg-light h-100">
+          <h2 class="text-center pt-4">Echo Studio – Banners</h2>
         </div>
-        <div class="col-md"></div>
+        <div class="col-lg"></div>
       </div>
-      <div class="row h-100">
-        <div class="col-md"></div>
-        <div class="col-md-7 bg-light h-100 pt-5">
-          <h2 class="text-center">Echo Studio – Animated Social</h2>
-          <br />
-          <h4>No Headline Version</h4>
+      <div class="row">
+        <div class="col-lg"></div>
+        <div class="col-lg-3 bg-light pt-4">
+          <p class="text-center"><strong>Animated</strong></p>
           <ul>
             <li>
-              <a href="social/9x16_NoTextP.mp4">9x16 – Price</a>
+              <a href="echo-studio_p_300x250/index.html">300x250 Price</a>
             </li>
             <li>
-              <a href="social/9x16_NoTextNP.mp4">9x16 – No Price</a>
-            </li>
-            <li>
-              <a href="social/1x1_NoTextP.mp4">1x1 – Price</a>
-            </li>
-            <li>
-              <a href="social/1x1_NoTextNP.mp4">1x1 – No Price</a>
+              <a href="echo-studio_np_300x250/index.html">300x250 Non-Price</a>
             </li>
           </ul>
-          <h4>Headline Version</h4>
           <ul>
             <li>
-              <a href="social/9x16_TextP.mp4">9x16 – Price</a>
+              <a href="echo-studio_p_728x90/index.html">728x90 Price</a>
             </li>
             <li>
-              <a href="social/9x16_TextNP.mp4">9x16 – No Price</a>
+              <a href="echo-studio_np_728x90/index.html">728x90 Non-Price</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="echo-studio_p_160x600/index.html">160x600 Price</a>
             </li>
             <li>
-              <a href="social/1x1_TextP.mp4">1x1 – Price</a>
+              <a href="echo-studio_np_160x600/index.html">160x600 Non-Price</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="echo-studio_p_970x250/index.html">970x250 Price</a>
             </li>
             <li>
-              <a href="social/1x1_TextNP.mp4">1x1 – No Price</a>
+              <a href="echo-studio_np_970x250/index.html">970x250 Non-Price</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="echo-studio_p_300x600/index.html">300x600 Price</a>
+            </li>
+            <li>
+              <a href="echo-studio_np_300x600/index.html">300x600 Non-Price</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="echo-studio_p_320x50/index.html">320x50 Price</a>
+            </li>
+            <li>
+              <a href="echo-studio_np_320x50/index.html">320x50 Non-Price</a>
             </li>
           </ul>
         </div>
-        <div class="col-md"></div>
+        <div class="col-lg-3 bg-light pt-4">
+          <p class="text-center"><strong>Static</strong></p>
+          <ul>
+            <li>
+              <a href="Statics/300x250-p.jpg">300x250 Price</a>
+            </li>
+            <li>
+              <a href="Statics/300x250-np.jpg">300x250 Non-Price</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="Statics/728x90-p.jpg">728x90 Price</a>
+            </li>
+            <li>
+              <a href="Statics/728x90-np.jpg">728x90 Non-Price</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="Statics/160x600-p.jpg">160x600 Price</a>
+            </li>
+            <li>
+              <a href="Statics/160x600-np.jpg">160x600 Non-Price</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="Statics/970x250-p.jpg">970x250 Price</a>
+            </li>
+            <li>
+              <a href="Statics/970x250-np.jpg">970x250 Non-Price</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="Statics/300x600-p.jpg">300x600 Price</a>
+            </li>
+            <li>
+              <a href="Statics/300x600-np.jpg">300x600 Non-Price</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="Statics/320x50-p.jpg">320x50 Price</a>
+            </li>
+            <li>
+              <a href="Statics/320x50.jpg">320x50 Non-Price</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="col-lg"></div>
+      </div>
+      <div class="row">
+        <div class="col-lg"></div>
+        <div class="col-lg-6 bg-light h-100">
+          <h2 class="text-center pt-4">Echo Studio – Social</h2>
+        </div>
+        <div class="col-lg"></div>
+      </div>
+      <div class="row">
+        <div class="col-lg"></div>
+        <div class="col-lg-3 bg-light pt-4">
+          <p class="text-center"><strong>Animated</strong></p>
+          <ul>
+            <li>
+              <a href="social/1x1_TextP.mp4">In-Feed GIF – Price</a>
+            </li>
+            <li>
+              <a href="social/1x1_TextNP.mp4">In-Feed GIF – No Price</a>
+            </li>
+          </ul>
+        </div>
+        <div class="col-lg-3 bg-light pt-4">
+          <p class="text-center"><strong>Static</strong></p>
+          <ul>
+            <li>
+              <a href="Social/Statics/In-Feed-A-P.jpg">In-Feed A – Price</a>
+            </li>
+            <li>
+              <a href="Social/Statics/In-Feed-A-NP.jpg">In-Feed A – No Price</a>
+            </li>
+            <li>
+              <a href="Social/Statics/In-Feed-B-P.jpg">In-Feed B – Price</a>
+            </li>
+            <li>
+              <a href="Social/Statics/In-Feed-B-NP.jpg">In-Feed B – No Price</a>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <a href="Social/Statics/Story-Static-A-P.jpg">Story A – Price</a>
+            </li>
+            <li>
+              <a href="Social/Statics/Story-Static-A-NP.jpg"
+                >Story A – No Price</a
+              >
+            </li>
+            <li>
+              <a href="Social/Statics/Story-Static-B-P.jpg">Story B – Price</a>
+            </li>
+            <li>
+              <a href="Social/Statics/Story-Static-B-P.jpg">Story B – Price</a>
+            </li>
+          </ul>
+
+          <ul>
+            <li>
+              <a href="Social/Statics/Story-Static-A-P.jpg"
+                >Multi-Story – Price – Frame 1</a
+              >
+            </li>
+            <li>
+              <a href="Social/Statics/Story-Multi-F2.jpg"
+                >Multi-Story – Price – Frame 2</a
+              >
+            </li>
+            <li>
+              <a href="Social/Statics/Story-Multi-F3.jpg"
+                >Multi-Story – Price – Frame 3</a
+              >
+            </li>
+          </ul>
+
+          <ul>
+            <li>
+              <a href="Social/Statics/Story-Static-A-NP.jpg"
+                >Multi-Story – No Price – Frame 1</a
+              >
+            </li>
+            <li>
+              <a href="Social/Statics/Story-Multi-F2.jpg"
+                >Multi-Story – No Price – Frame 2</a
+              >
+            </li>
+            <li>
+              <a href="Social/Statics/Story-Multi-F3.jpg"
+                >Multi-Story – No Price – Frame 3</a
+              >
+            </li>
+          </ul>
+        </div>
+        <div class="col-lg"></div>
       </div>
     </div>
     <script
