--- a/staging/index.html
+++ b/staging/index.html
@@ -179,7 +179,9 @@
               <a href="social/Statics/Story-Static-B-P.jpg">Story B – Price</a>
             </li>
             <li>
-              <a href="social/Statics/Story-Static-B-P.jpg">Story B – Price</a>
+              <a href="social/Statics/Story-Static-B-NP.jpg"
+                >Story B – No Price</a
+              >
             </li>
           </ul>
 
