--- a/staging-2/ECHOB24_Anim_300x250/index.html
+++ b/staging-2/ECHOB24_Anim_300x250/index.html
@@ -9,7 +9,7 @@
     <!-- Greensock -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
     <!-- Dev tools -->
-    <script src="../GSDevTools.min.js"></script>
+    <!-- <script src="../GSDevTools.min.js"></script> -->
     <script type="text/javascript">
       var clickTag = "http://www.example.com";
     </script>
@@ -42,7 +42,7 @@
     </div>
     <script>
       //Activate Dev tools
-      GSDevTools.create();
+      // GSDevTools.create();
 
       //Animation timelines
       function fadeIn() {
