--- a/ECHOB24_Anim_300x250/index.html
+++ b/ECHOB24_Anim_300x250/index.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="ad.size" content="width=300,height=250" />
-    <title>Echo Studio 300x250 P</title>
+    <title>Echo Buds 300x250 P</title>
     <link rel="stylesheet" href="style.css" />
     <!-- Greensock -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
     <!-- Dev tools -->
-    <script src="../GSDevTools.min.js"></script>
+    <!-- <script src="../GSDevTools.min.js"></script> -->
     <script type="text/javascript">
       var clickTag = "http://www.example.com";
     </script>
   </head>
   <body>
+    `
     <div id="ad" onclick="window.open(window.clickTag, '_blank')">
       <div id="banner">
         <div id="buds" class="set">
@@ -38,17 +39,28 @@
         <div id="price" class="set">
           <img src="images/price.png" width="300px" height="250px" />
         </div>
+        <!-- <div id="sparkles" class="set">
+          <img src="images/sparkles.gif" width="300px" height="250px" />
+        </div> -->
       </div>
     </div>
     <script>
       //Activate Dev tools
-      GSDevTools.create();
+      // GSDevTools.create();
 
       //Animation timelines
       function fadeIn() {
         var tl = gsap.timeline({ id: "fadeIn" });
         tl.from(
-          ["#copy1", "#copy2", "#copy3", "#buds", "#logo", "#price"],
+          [
+            "#copy1",
+            "#copy2",
+            "#copy3",
+            "#buds",
+            "#logo",
+            "#price",
+            "#sparkles",
+          ],
           0.25,
           {
             autoAlpha: 0,
